[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "scikit_image>=0.15.0",
    "numpy>=1.17.2",
    "matplotlib>=3.1.1",
    "omegaconf>=1.4.1",
    "PyYAML>=5.4",
    "scikit_learn>=0.22.2.post1",
    "scikit-image>=0.10.0",
    "torch>=1.5.0",
    "torchvision>=0.6.0"
]
build-backend = "setuptools.build_meta"