[metadata]
name = inhouse_models
version = 0.0.3
author = Akash Nagaraj
author_email = akash_n@brown.edu
description = Package to import in-house models from the Serre Lab at Brown University.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/serre-lab/inhouse_models
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src