[metadata]
name = serrelabmodels
version = 0.0.6
author = Akash Nagaraj
author_email = akash_n@brown.edu
description = Package to import in-house models from the Serre Lab at Brown University.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/serre-lab/serrelabmodels
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6